// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form, round select stores the selected round in Redux 1`] = `
<input
  class="PrivateSwitchBase-input css-1m9pwf3"
  name="row-radio-buttons-group"
  type="radio"
  value="1"
/>
`;

exports[`Form, round select stores the selected round in Redux 2`] = `
<input
  checked=""
  class="PrivateSwitchBase-input css-1m9pwf3"
  name="row-radio-buttons-group"
  type="radio"
  value="3"
/>
`;
